test/sematest/invalid/comparisons.java
class A {
  public static void main(String[] args) {
    boolean a = new A() == 4;
  }
}